--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,6 @@ body{
     padding: 0px;
     margin: 0px;
     font-family: 'Barlow Semi Condensed', sans-serif;
-}
-
-.app{
     background-image: radial-gradient( hsl(214, 47%, 23%),hsl(237, 49%, 15%));
     width: 100%;
     height: 100%;
@@ -57,8 +54,78 @@ body{
 
 .gameboard{
     background-image: url(./assets/bg-triangle.svg);
+    background-position: center;
     background-repeat: no-repeat;
-    width: 310px;
+    width: 430px;
     height: 300px;
-    margin: 150px 0px 0px 35%;
+    margin: 150px 0px 0px 30%;
+    padding-top: 50px;
+}
+
+.rock{
+    border-radius: 50%;
+    border: 20px solid hsl(349, 71%, 52%);
+    width: 140px;
+    height: 140px;
+    background-image: url(./assets/icon-rock.svg);
+    background-repeat: no-repeat;
+    background-color: ivory;
+    background-position: center;
+    cursor: pointer;
+    box-shadow: -1px 10px  rgb(236, 229, 229) inset, 0px 8px  hsl(349, 70%, 36%);
+}
+
+.scissors{
+    border-radius: 50%;
+    border: 20px solid hsl(39, 89%, 49%);
+    width: 140px;
+    height: 140px;
+    background-image: url(./assets/icon-scissors.svg);
+    background-repeat: no-repeat;
+    background-color: ivory;
+    background-position: center;
+    cursor: pointer;
+    box-shadow: -1px 10px  rgb(236, 229, 229) inset, 0px 8px  hsl(39, 82%, 35%);
+}
+
+.paper{
+    border-radius: 50%;
+    border: 20px solid hsl(230, 89%, 62%);
+    width: 140px;
+    height: 140px;
+    background-image: url(./assets/icon-paper.svg);
+    background-repeat: no-repeat;
+    background-color: ivory;
+    background-position: center;
+    cursor: pointer;
+    box-shadow: -1px 10px  rgb(236, 229, 229) inset, 0px 8px  hsl(230, 71%, 41%);
+}
+
+.gboard-top{
+    display: flex;
+    justify-content: space-between;
+    margin-top: -20%;
+}
+
+.gboard-bottom{
+    object-position: center;
+    margin: 25px 0px 0px 28%;
+}
+
+.rules{
+    position: absolute;
+    top: 90%;
+    right: 2%;
+    outline: none;
+    width: 130px;
+    padding:10px 0px;
+    border-radius: 10px;
+    border: 2px solid hsl(217, 16%, 45%);
+    background: transparent;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    cursor: pointer;
 }
