--- a/src/styles/step2.css
+++ b/src/styles/step2.css
@@ -110,8 +110,10 @@
 }
 
 @media only screen and (max-width:375px){
+
     .step2{
         padding: 0px;
+        height: 650px;
     }
     
     .box{
@@ -139,7 +141,7 @@
         display: block;
         text-align: center;
         align-content: center;
-        margin: 90px 0px 0px 0px;
+        margin: 50px 0px 0px 0px;
     }
     
     .play-again{
@@ -215,9 +217,13 @@
         width: 120px;
         height: 120px;
     }
+
+    .rules{
+        top: 90%;
+    }
 }
 
-@media only screen and (max-width:414px){
+@media only screen and (max-height:736px){
     .step2{
         padding: 0px;
     }
