--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@300;500;600&display=swap');
+
+body{
+  padding: 0px;
+  margin: 0px;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  background-image: radial-gradient( hsl(214, 47%, 23%),hsl(237, 49%, 15%));
+  width: 100%;
+  height: 100%;
 }
 
 code {
