--- a/src/styles/step2.css
+++ b/src/styles/step2.css
@@ -1,16 +1,136 @@
-.step2{
-    padding: 0px 10%;
-}
-
 .box{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    text-transform: uppercase;
+    text-align: center;
+    color: #ffffff;
+    width: 90%;
+    max-width: 550px;
+    font-size: 20px;
+    margin: 50px 0px 0px 0px;
+    padding-left: 5%;
+}
+
+.middle{
+    display: none;
+}
+
+.static{
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    background-color: rgb(23, 27, 49);
+    opacity: 0.4;
+}
+
+.rock{
+    border-radius: 50%;
+    border: 10px solid hsl(349, 71%, 52%);
+    width: 100px;
+    height: 100px;
+    background-image: url(../assets/icon-rock.svg);
+    background-repeat: no-repeat;
+    background-color: ivory;
+    background-position: center;
+    cursor: pointer;
+    box-shadow: -1px 7px  rgb(236, 229, 229) inset, 0px 5px  hsl(349, 70%, 36%);
+}
+
+.scissors{
+    border-radius: 50%;
+    border: 10px solid hsl(39, 89%, 49%);
+    width: 100px;
+    height: 100px;
+    background-image: url(../assets/icon-scissors.svg);
+    background-repeat: no-repeat;
+    background-color: ivory;
+    background-position: center;
+    cursor: pointer;
+    box-shadow: -1px 7px  rgb(236, 229, 229) inset, 0px 5px  hsl(39, 82%, 35%);
+}
+
+.paper{
+    border-radius: 50%;
+    border: 10px solid hsl(230, 89%, 62%);
+    width: 100px;
+    height: 100px;
+    background-image: url(../assets/icon-paper.svg);
+    background-repeat: no-repeat;
+    background-color: ivory;
+    background-position: center;
+    cursor: pointer;
+    box-shadow: -1px 7px  rgb(236, 229, 229) inset, 0px 5px  hsl(230, 71%, 41%);
+}
+
+.bottom{
+    display: block;
+    text-align: center;
+    align-content: center;
+    margin: 50px 0px 0px 0px;
+}
+
+.bottom h6{
+    margin: 0px 0px 20px 0px;
+    font-size: 40px;
+    color: #ffffff;
+}
+
+.play-again{
+    width: 150px;
+    height: 40px;
+    outline: none;
+    background-color: #ffffff;
+    padding: 0px 0px;
+    color: hsl(214, 47%, 23%);
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 3px;
+    letter-spacing: 1px;
+    border: none;
+    border-radius: 10px;
+    text-align: center;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+@media only screen and (min-width:1024px){
+
+    .box{
+        margin-left: 22%;
+    }
+
+    .bottom{
+        display: none;
+    }
+
+    .middle{
+        display: block;
+        margin: 120px 20px 0px 20px;
+    }
+
+    .middle h6{
+        font-size: 40px;
+        margin: 0px;
+    }
+
+    .static{
+        width: 180px;
+        height: 180px;
+    }
+}
+
+
+
+/* .box{
+    display: flex;
+    justify-content: space-between;
     text-transform: uppercase;
     color: #ffffff;
     font-size: 36px;
     font-weight: 600;
-    width: 800px;
-    margin: 3% 0px 0px 9%;
+    width: 70%;
+    max-width: 800px;
+    margin: 3% 14% 0px 0px;
 }
 
 .middle h6{
@@ -113,7 +233,7 @@
 
     .step2{
         padding: 0px;
-        height: 650px;
+        height: 100%;
     }
     
     .box{
@@ -220,7 +340,7 @@
 
     .rules{
         top: 90%;
-        margin-top: 30px;
+        margin-top: 50px;
     }
 }
 
@@ -331,4 +451,4 @@
         width: 120px;
         height: 120px;
     }
-}
+} */
